--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,12 @@ footer {
   height: 30px;
   margin-bottom: 10px;
 }
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease;
+}
+.show {
+  opacity: 1;
+  transform: translateY(0);
+}
